--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,23 @@
-version: "3.8"
+version: '3.8'
 
 services:
-  # 🐘 PostgreSQL Database
   postgres:
     image: postgres:15
-    container_name: postgres
+    container_name: customer-db
+    restart: always
     environment:
-      POSTGRES_DB: customer_service
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 12345
+      POSTGRES_DB: customer_service
     ports:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: always
 
-  # 🦓 Zookeeper (Required for Kafka)
-  zookeeper:
-    image: confluentinc/cp-zookeeper:7.0.1
-    container_name: zookeeper
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - "2181:2181"
-    restart: always
-
-  # 🦜 Kafka Broker
   kafka:
-    image: confluentinc/cp-kafka:7.0.1
+    image: confluentinc/cp-kafka:7.3.0
     container_name: kafka
-    depends_on:
-      - zookeeper
+    restart: always
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -39,33 +25,32 @@ services:
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     ports:
       - "9092:9092"
-    restart: always
+    depends_on:
+      - zookeeper
 
-  # 📦 Customer Service (Spring Boot)
-  customerservice:
-    build:
-      context: .   # Make sure this is correct!
-      dockerfile: Dockerfile
-    container_name: customerservice
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.3.0
+    container_name: zookeeper
+    restart: always
+    environment:
+      ZOOKEEPER_CLIENT_PORT: 2181
+
+  customer-service:
+    build: .
+    container_name: customer-service
+    restart: always
+    environment:
+      DB_URL: jdbc:postgresql://postgres:5432/customer_service
+      DB_USER: postgres
+      DB_PASSWORD: 12345
+      KAFKA_SERVER: kafka:9092
+      MAIL_USER: temperory789@gmail.com
+      MAIL_PASS: ufwwsufczxhmkqsi
+    ports:
+      - "8081:8081"
     depends_on:
       - postgres
       - kafka
-    ports:
-      - "8081:8081"
-    environment:
-      SPRING_APPLICATION_NAME: customerservice
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/customer_service
-      SPRING_DATASOURCE_USERNAME: postgres
-      SPRING_DATASOURCE_PASSWORD: 12345
-      SPRING_JPA_HIBERNATE_DDL_AUTO: update
-      SPRING_KAFKA_BOOTSTRAP_SERVERS: kafka:9092
-      SPRING_MAIL_HOST: smtp.gmail.com
-      SPRING_MAIL_PORT: 587
-      SPRING_MAIL_USERNAME: temperory789@gmail.com
-      SPRING_MAIL_PASSWORD: ufwwsufczxhmkqsi
-      SPRING_MAIL_PROPERTIES_MAIL_SMTP_AUTH: "true"
-      SPRING_MAIL_PROPERTIES_MAIL_SMTP_STARTTLS_ENABLE: "true"
-    restart: always
 
 volumes:
   postgres_data:
