--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=8081
 # ------------------------
 # PostgreSQL Configuration
 # ------------------------
-#spring.datasource.url=jdbc:postgresql://localhost:5432/customer_service
-spring.datasource.url=jdbc:postgresql://postgres:5432/customer_service
+spring.datasource.url=jdbc:postgresql://localhost:5432/customer_service
+#spring.datasource.url=jdbc:postgresql://postgres:5432/customer_service
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
@@ -27,7 +27,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 # ------------------------
 # Apache Kafka Producer Settings
 # ------------------------
-#spring.kafka.bootstrap-servers=localhost:9092
-spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.bootstrap-servers=localhost:9092
+#spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+
