--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,35 +1,33 @@
 spring.application.name=customerservice
+
 # ------------------------
 # Server Configuration
 # ------------------------
 server.port=8081
 
-
 # ------------------------
 # PostgreSQL Configuration
 # ------------------------
-spring.datasource.url=jdbc:postgresql://localhost:5432/customer_service
-#spring.datasource.url=jdbc:postgresql://postgres:5432/customer_service
-spring.datasource.username=postgres
-spring.datasource.password=12345
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/customer_service}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASSWORD:12345}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# ------------------------
 # Spring Mail Configuration
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=temperory789@gmail.com
-spring.mail.password=ufwwsufczxhmkqsi
+# ------------------------
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USER:temperory789@gmail.com}
+spring.mail.password=${MAIL_PASS:ufwwsufczxhmkqsi}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-
 
 # ------------------------
 # Apache Kafka Producer Settings
 # ------------------------
-spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.bootstrap-servers=kafka:9092
+spring.kafka.bootstrap-servers=${KAFKA_SERVER:localhost:9092}
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
-
