--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 spring.application.name=customerservice
 server.port=8081
 
-# PostgreSQL Configuration
-spring.datasource.url=jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:customer_service}
+# PostgreSQL Configuration using Railway's managed Postgres
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:12345}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-# Optionally, remove the explicit dialect if not needed:
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Spring Mail Configuration
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
