--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 spring.application.name=customerservice
 server.port=8081
 
-# PostgreSQL Configuration using Railway's managed Postgres
-spring.datasource.url=jdbc:${DATABASE_URL}
+# PostgreSQL Configuration
+spring.datasource.url=jdbc:${DATABASE_URL:jdbc:postgresql://localhost:5432/customer_service}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:12345}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Spring Mail Configuration
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
