--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=customerservice
 server.port=8081
 
 # PostgreSQL Configuration
-spring.datasource.url=jdbc:${DATABASE_URL:jdbc:postgresql://localhost:5432/customer_service}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/customer_service}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:12345}
 spring.jpa.hibernate.ddl-auto=update
